# ui_testing_agent

./: .gitignore  README.md  main.py  pyproject.toml
sample_webapp/: .gitignore  README.md  instructions.md
sample_webapp/backend/: main.py
sample_webapp/frontend/: package-lock.json  package.json
sample_webapp/frontend/public/: index.html
sample_webapp/frontend/src/: App.css  App.js
src/browser_use_agent/: agent.py  task_prompt_google_search.py  task_prompt_sample_webapp.py
src/ui_testing_agent/: agent.py  task_prompt_google_search.py  task_prompt_sample_webapp.py  task_prompt_v1.py
