[project]
name = "ui-testing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use[cli,memory]>=0.2.5",
    "fastapi>=0.115.12",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
